syntax = "proto3";

package proto;
option go_package = "experimentation/grpc/proto";

service KeyValueService {
  rpc Insert(InsertRequest) returns (InsertResponse) {}
  rpc Lookup(LookupRequest) returns (LookupResponse) {}
  rpc Keys(KeysRequest) returns (KeysResponse) {}
  rpc InsertStream(stream InsertRequest) returns (stream InsertResponse) {}
}

message InsertRequest {
  string key = 1;
  string value = 2;
}

message InsertResponse { bool success = 1; }

message LookupRequest { string key = 1; }

message LookupResponse { string value = 1; }

message KeysRequest {}

message KeysResponse { repeated string keys = 1; }